[package]
name = "ikb-cli"
version = "4.4.104-alpha.1"
edition = "2024"
license = "AGPL-3.0"

[lib]
path = "src/lib.rs"

[dependencies]
ikb-core = { path = "../../crates/core" }
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
cron = "0.13"
axum = "0.8"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
async-stream = "0.3"
regex = "1.11"
futures-core = "0.3"

[package.metadata.release]
tag-prefix = "ikuai-bypass-"
