[package]
name = "ikb-integration-tests"
version = "4.4.102"
edition = "2024"
publish = false

[dependencies]
axum = "0.8"
base64 = "0.22"
ikb-core = { path = "../../crates/core" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.14"
tokio = { version = "1.47", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }

[lib]
path = "src/lib.rs"
