[package]
name = "ikb-core"
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2.0"
humantime-serde = "1.1"
base64 = "0.22"
md5 = "0.8"
once_cell = "1.21"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["time"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }


[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_UI_Shell",
] }
