[package]
name = "ikb-app"
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
ikb-core = { path = "../../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-log = "2"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
tauri-build = "2"

[lib]
name = "ikb_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
